<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_view_margin">

    <ListView
        android:id="@+id/inventory_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_weight="9" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_weight="9">

        <TextView
            android:id="@+id/empty_view_head"
            style="@style/header_empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/empty_view_text"
            android:layout_centerHorizontal="true"
            android:text="@string/empty_view_header" />

        <TextView
            android:id="@+id/empty_view_text"
            style="@style/text_empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/empty_view_text" />
    </RelativeLayout>


    <Button
        android:id="@+id/add_product_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_dimen"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/add_product" />

</LinearLayout>